@@ -315,6 +315,19 @@ name|apache
 operator|.
 name|zookeeper
 operator|.
+name|KeeperException
+operator|.
+name|NotEmptyException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
 name|WatchedEvent
 import|;
 end_import
@@ -3373,6 +3386,8 @@ literal|"/"
 argument_list|)
 condition|)
 block|{
+try|try
+block|{
 name|delete
 argument_list|(
 name|path
@@ -3383,6 +3398,19 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NotEmptyException
+name|e
+parameter_list|)
+block|{
+name|clean
+argument_list|(
+name|path
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 catch|catch
